Fix folder selector not been visible.

--- a/src/styles/journal-theme.scss
+++ b/src/styles/journal-theme.scss
@@ -46,7 +46,7 @@ $color-link-background: rgba(236,208,120,.2);
     line-height: 1.25;
     color: $color-primary-text;
 
-    input, button {
+    input, button, select {
         color: $color-primary-text;
     }
     
